[gd_scene load_steps=7 format=3 uid="uid://cmwy2gc561grf"]

[ext_resource type="Texture2D" uid="uid://bj2ambwei5ogi" path="res://assets/bg.png" id="1_glbis"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_mu601"]
[ext_resource type="PackedScene" uid="uid://bv2udu7jovyg4" path="res://scenes/apple.tscn" id="2_5ig6f"]
[ext_resource type="PackedScene" uid="uid://dfo1ohutuoyxm" path="res://scenes/snake.tscn" id="2_ads1u"]
[ext_resource type="PackedScene" uid="uid://ee1ph2qamh4c" path="res://scenes/hud.tscn" id="2_uejj3"]
[ext_resource type="PackedScene" uid="uid://blaqe5rqd5u01" path="res://scenes/game_over.tscn" id="6_j4eic"]

[node name="Main" type="Node"]
script = ExtResource("1_mu601")

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 1050.0
texture = ExtResource("1_glbis")

[node name="Hud" parent="." instance=ExtResource("2_uejj3")]

[node name="Snake" parent="." instance=ExtResource("2_ads1u")]

[node name="Apple" parent="." instance=ExtResource("2_5ig6f")]

[node name="GameOverScreen" parent="." instance=ExtResource("6_j4eic")]
process_mode = 2

[connection signal="self_hit" from="Snake" to="." method="_on_snake_self_hit"]
[connection signal="area_entered" from="Apple" to="." method="_on_apple_area_entered"]
[connection signal="restart" from="GameOverScreen" to="." method="_on_game_over_screen_restart"]
